IntersectionObserver: throw exceptions as spec mandates.

BUG=617396
R=eae@chromium.org,ikilpatrick@chromium.org

Review-Url: https://codereview.chromium.org/2046973003
Cr-Commit-Position: refs/heads/master@{#398640}

Former-commit-id: fe5355eb33ecae91d4b92554a627a2677b7fbae9